Changing file strcuture

--- a/portfolio-2020-final.webflow (2)/index.html
+++ b/portfolio-2020-final.webflow (2)/index.html
@@ -69,7 +69,7 @@
             <p class="paragraph-18"><span class="text-span-4"><strong class="bold-text-9">This moment is for your company&#x27;s evolution and growth. To achieve your objective,<br>you&#x27;ve surrounded yourself with the best people, made a plethora of sacrifices and executed strategic moves. With all that addressed, you are now poised for your company&#x27;s &quot;next level&quot;.<br><br>What is your vision for that level? <br>What kind of additional talent do you need to reach that stage?<br></strong>‍<br><strong>In the next few minutes, I&#x27;m going to tell you why having me in your arsenal will yield the<br>results you&#x27;ve been searching for.</strong><br>‍<br>My work is an extension of me. Every job, every project is an opportunity to create a<br>masterpiece. My objective is to push conventional norms. As you will see from my references<br>and my gallery, I seek to create something original, authentic and captivating. Teammates are my resources: solutions to the problems we collectively solve. In this work, I have discovered my core values are honesty, communication and unity. On top of those values, I seek to maintain my deep sense of curiosity and desire to evolve. In fact, rather than being demotivated by critiques, they influence my evolution. I am inspired by the continued expansion of those around me.To learn more about what I can do for your company, head over to my “gallery” to see my work. As a tool for further context, you will find references in my “testimonials” section below.</span></p>
             <div class="top-padding who-am-i-button-container">
               <div data-w-id="edf24840-ff77-8587-47b5-276aa3bfd4f2" style="opacity:0" class="blog-content-info who-am-i-button-links">
-                <a href="documents/finalresume-2020.pdf" target="_blank" class="button center left who-am-i-buttons w-inline-block">
+                <a href="finalresume-2020.pdf" target="_blank" class="button center left who-am-i-buttons w-inline-block">
                   <h5 class="button-header">View Resume</h5>
                 </a>
                 <a href="portfolio-professional-labor-management-project.html" class="button center left w-inline-block">
@@ -450,7 +450,7 @@
               <div class="useful-pages bottom">
                 <h5 class="footer-tittle second white">Resume | Cover Letter</h5>
               </div>
-              <a href="documents/finalresume-2020.pdf" target="_blank" class="button center left who-am-i-buttons w-inline-block">
+              <a href="finalresume-2020.pdf" target="_blank" class="button center left who-am-i-buttons w-inline-block">
                 <h5 class="button-header">Explore CV</h5>
               </a>
             </div>
@@ -491,7 +491,7 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5e94b3fc3e4b9f454d290ae1" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
